# LauncherV2

./: README.md  bun.lockb  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/builds/: download_manager.rs
src/api/authentication/interfaces/: AuthResponse.ts
src/api/authentication/requests/: account.ts  asteria.ts  verify.ts
src/api/authentication/zustand/: state.ts
src/api/config/: endpoints.ts
src/api/storefront/: shop.ts
src/api/xmpp/: socket.ts
src/app/: not-found.tsx  page.tsx
src/app/home/: page.tsx
src/app/leaderboard/: page.tsx
src/app/servers/: page.tsx
src/app/settings/: page.tsx
src/app/storefront/: page.tsx
src/components/core/: SideBar.tsx
src/components/home/: FriendsSection.tsx  NewsSection.tsx  StatisticsSection.tsx
